docs/tests/parser/interface/invalid/InterfaceFuncMissingSemi.b
interface IFoo {
    fn void foo()
    fn int bar();
}
